--- a/index.html
+++ b/index.html
@@ -2,11 +2,70 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Simón Dice</title>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <style type="text/css">
+        .cuadro {
+            height: 250px;
+            border-color: white;
+            border-width: 5px;
+            border-style: solid;
+            opacity: 0.5;
+            transition: opacity 500ms;
+        }
+
+        #cuadro-1 {
+            background-color: red;
+        }
+
+        #cuadro-2 {
+            background-color: yellow;
+        }
+
+        #cuadro-3 {
+            background-color: green;
+        }
+
+        #cuadro-4 {
+            background-color: blue;
+        }
+    </style>
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-9">
+            <div class="alert alert-info" role="alert" id="estado"><!-- --></div>
+          </div>
+          <div class="col-sm-2">
+            <p>Ronda Nº <strong id="numero-ronda">0</strong></p>
+          </div>
+          <div class="col-sm-1">
+            <button type="button" class="btn btn-outline-dark">Comenzar!</button>
+          </div>
+        </div>
+      </div>
+      <div class="container" id="tablero">
+        <div class="row">
+          <div class="col-sm">
+            <div class="cuadro" id="cuadro-1">A</div>
+          </div>
+          <div class="col-sm">
+            <div class="cuadro" id="cuadro-2">B</div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm">
+            <div class="cuadro" id="cuadro-3">C</div>
+          </div>
+          <div class="col-sm">
+            <div class="cuadro" id="cuadro-4">D</div>
+          </div>
+        </div>
+      </div>
     
 </body>
+
 </html>
