--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             border-color: white;
             border-width: 5px;
             border-style: solid;
+            border-radius: 20px;
             opacity: 0.5;
+            font-size: 0;
             transition: opacity 500ms;
         }
 
