--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
           padding-right:0;
           padding-left:0;
         }
+        
+        .oculto {
+          display: none;
+        }
 
     </style>
 </head>
